add api functionality

--- a/DMTools/app/.env.example
+++ b/DMTools/app/.env.example
@@ -1,4 +1,16 @@
-API_BASE_URL=
-API_PORT=
-APP_BASE_URL=
+# ------------------------------------------------------------------------------
+# Environment Details
+# ------------------------------------------------------------------------------
+NODE_ENV=development
+
+# ------------------------------------------------------------------------------
+# App
+# ------------------------------------------------------------------------------
 APP_PORT=
+APP_HOST=
+
+# ------------------------------------------------------------------------------
+# API
+# ------------------------------------------------------------------------------
+REACT_APP_API_HOST=https://www.dnd5eapi.co
+API_PORT=
