--- a/DMTools/app/package.json
+++ b/DMTools/app/package.json
@@ -15,6 +15,9 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "ajv": "^8.11.0",
+    "axios": "^0.26.1",
+    "axios-mock-adapter": "^1.20.0",
+    "dotenv": "^16.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0",
