--- a/DMTools/app/package.json
+++ b/DMTools/app/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
