--- a/DMTools/app/package.json
+++ b/DMTools/app/package.json
@@ -21,7 +21,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "sass": "^1.50.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -30,6 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint . --ext .js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
