--- a/DMTools/app/Dockerfile
+++ b/DMTools/app/Dockerfile
@@ -1,16 +1,32 @@
-# Use an official node runtime as a parent image
-FROM node:8
+# ################################# W A R N I N G ####################################################################
+# This DockerFile is used for deployments only, please do not change for other purposes. It will break our deployment.
+# ####################################################################################################################
 
-WORKDIR /app
+FROM node:14
 
-# Install dependencies
-COPY package.json /app
+ENV HOME=/opt/app-root/src
 
-RUN npm install --silent
+RUN mkdir -p $HOME
 
-# Add rest of the client code
-COPY . /app
+WORKDIR $HOME
+
+# Copy the package files only
+# A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
+COPY ./package*.json ./
+
+# If you are building your code for production
+# RUN npm install --only=production
+RUN npm install
+
+ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+
+# Copy the rest of the files
+COPY . ./
+
+# Build app
+RUN npm run build
 
 EXPOSE 8080
 
-CMD npm start
+# RUN APP
+CMD ["npm", "start"]
