--- a/DMTools/app/package.json
+++ b/DMTools/app/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -23,6 +22,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.50.0",
+    "semver": "^7.3.7",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1"
   }
 }
